cp-rbac-ldap/kcat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kcat
  namespace: confluent
spec:
  containers:
  - name: cp-kcat
    image: confluentinc/cp-kcat:7.9.1
    command: ['sh', '-c', 'tail -f /dev/null']
    volumeMounts:
      - name: tls-certs
        mountPath: /mnt/certs
        readOnly: true
      - name: kcat-configs
        mountPath: /mnt/configs        
        readOnly: true
  volumes:
    - name: tls-certs
      secret:
        secretName: tls-kafka
    - name: kcat-configs
      configMap:
        defaultMode: 420
        name: kcat-config
