cp-rbac-ldap/ldapui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ldapui
  namespace: confluent
  labels: 
    app: ldapui
spec:
  containers:
  - name: ldapui
    image: dnknth/ldap-ui:latest
    ports:
    - containerPort: 5000
    readinessProbe:
      tcpSocket:
        port: 5000
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 5000
      initialDelaySeconds: 5
      periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ldapui
  namespace: confluent
spec:
  sessionAffinity: ClientIP
  selector:
    app: ldapui
  ports:
    - name: ldapui
      port: 80
      targetPort: 5000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ldapui-ingress
  namespace: confluent
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ldapui.k8s.internal.schmitzi.net`)
      services:
        - name: ldapui
          port: 80
