cp-rbac-ldap/traefik-ingress-cp.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: kafka
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: kafka
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: kafka-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: kafka
    type: kafka
spec:
  ports:
    - name: external
      port: 9092
      protocol: TCP
      targetPort: 9092
    - name: rest
      port: 8090
      protocol: TCP
      targetPort: 8090
  selector:
    app: kafka
    clusterId: confluent
    confluent-platform: "true"
    type: kafka
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-ingress
  namespace: confluent
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`kafka.k8s.internal.schmitzi.net`)
      services:
        - name: kafka-bootstrap
          port: 9092  
    - match: HostSNI(`kafka0.k8s.internal.schmitzi.net`)
      services:
        - name: kafka-0-internal
          port: 9092
    - match: HostSNI(`kafka1.k8s.internal.schmitzi.net`)
      services:
        - name: kafka-1-internal
          port: 9092
    - match: HostSNI(`kafka2.k8s.internal.schmitzi.net`)
      services:
        - name: kafka-2-internal
          port: 9092
  tls:
    secretName: tls-schmitzi-ingress
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-ingress
  namespace: confluent
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rest.k8s.internal.schmitzi.net`)
      services:
        - name: kafka-bootstrap
          port: 8090  
    - kind: Rule
      match: Host(`c3.k8s.internal.schmitzi.net`)
      services:
        - name: controlcenter-0-internal
          port: 9021  
    - kind: Rule
      match: Host(`c3-prometheus.k8s.internal.schmitzi.net`)
      services:
        - name: controlcenter-0-internal
          port: 9090
    - kind: Rule
      match: Host(`c3-alertmanager.k8s.internal.schmitzi.net`)
      services:
        - name: controlcenter-0-internal
          port: 9093
    - kind: Rule
      match: Host(`schema.k8s.internal.schmitzi.net`)
      services:
        - name: schemaregistry-0-internal
          port: 8081
    - kind: Rule
      match: Host(`connect.k8s.internal.schmitzi.net`)
      services:
        - name: connect-0-internal
          port: 8083
  tls:
    secretName: tls-schmitzi-ingress
